--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,27 @@
-""
-name: CI Workflow
+name: Process GitHub Issues
+
 on:
-  push:
-    branches:
-      - main
+  issues:
+    types: [opened]
+
 jobs:
-  build:
+  process_issue:
     runs-on: ubuntu-latest
+    
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14'
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Run tests
-        run: npm test" | Out-File -FilePath .github\workflows\main.yml
+      - name: Process issue data
+        run: |
+          echo "Processing new issue..."
+          
+          # Issue 내용 추출 (User ID와 댓글을 파싱)
+          ISSUE_TITLE="${{ github.event.issue.title }}"
+          ISSUE_BODY="${{ github.event.issue.body }}"
+          
+          # 예시: Issue에 포함된 데이터를 처리 (로그로 출력)
+          echo "Issue Title: $ISSUE_TITLE"
+          echo "Issue Body: $ISSUE_BODY"
+          
+          # 필요한 처리를 추가 (예: 데이터베이스에 저장, 다른 API 호출 등)
